# analisador-sentimentos-pro

./: README.md  Youtube_coments_real.csv  app.py  iniciar.bat  instalar.bat  main.py  pyproject.toml  requirements.txt  resultado_analise.csv  temp.csv  test_analise.csv
src/sentiment_analyzer/core/: entities.py  interfaces.py  services.py  text_processor.py
src/sentiment_analyzer/models/: huggingface_provider.py
